--- a/vue/twoway_data_bind2.html
+++ b/vue/twoway_data_bind2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,24 +8,13 @@
 <script>
     class Observer {
 
-        constructor(data, x){
+        constructor(data){
 
             this.data = data
             this.walk(data)
-            this.x = x
+            this.eventBus = new Event()
         }
-//        getter(key, that){
-//            console.log(this.x)
-//            if(this.data[key]){
-//                console.log(`您访问了${key}`)
-//            }
-//        }
-//        setter(key, value){
-//            if(this.data[key]){
-//                this.data[key] = value
-//                console.log(`您设置了${key},新的值为${value}`)
-//            }
-//        }
+
         walk(obj){
             let val;
             for (let key in obj){
@@ -53,27 +41,36 @@
                     console.log('你设置了' + key);
                     console.log('新的' + key + ' = ' + newVal)
                     if (newVal === val) return;
+                    if(typeof newVal === 'object') { new Observer(newVal)}
                     val = newVal
                 }
             })
         }
 
+        $watch(attr, callback){
+            console.log(this.eventBus)
+            this.eventBus.on(attr, callback)
+        }
+
+
     }
 
-    let app1 = new Observer({
-        name: 'youngwind',
-        age: 25
-    },'yy');
-    let app2 = new Observer({
-        university: 'bupt',
-        major: 'computer'
-    });
+    let app = new Observer({
+        basicInfo: {
+            name: 'liujianhuan',
+            age: 25
+        },
+        company: 'Qihoo 360',
+        address: 'Chaoyang, Beijing'
+    })
 
-    // 要实现的结果如下：
-    app1.data.name // 你访问了 name
-    app1.data.age = 100;  // 你设置了 age，新的值为100
-    app2.data.university // 你访问了 university
-    app2.data.major = 'science'  // 你设置了 major，新的值为 science
+    app.data.basicInfo.name
+
+    app.$watch('age', function (oldVal, newVal) {
+        console.log(`我的年纪变了，现在已经是：${newVal}岁了`)
+    })
+
+    app.data.basicInfo.age = 100
 
 
 </script>
